--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
 REACT_APP_API_URL=https://ai-chatbot-8zu9.onrender.com/api
+
+MONGODB_URI=mongodb+srv://yuvrajraj0401:Yuvi455@chatbot.pnhtsna.mongodb.net/
